--- a/main.css
+++ b/main.css
@@ -182,6 +182,7 @@ nav a {
 nav a.active {
     color: #f0f0f0;
     background-color: #000;
+    border-radius: 2px;
 }
 
 nav h1 {
@@ -258,6 +259,7 @@ nav h1 {
 
     margin-left: 1em;
     margin-right: 1em;
+    margin-bottom: 5em;
 
     font-family: MerriweatherC, Times, "Times New Roman", serif;
     font-size: .9em;
